# pybliographer

./: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  ROADMAP  TODO  acconfig.h  autogen.sh  configure.ac  configure.in  pybliographer.doap  pybliographer.in  pybliographer.py  pybliographer.spec  pybliographic.desktop  pybrc.py  setup-check.py  setup.py
Connections/: library-of-congress.xml  medline.xml  spires-uk.xml
Pyblio/: Autoload.py  Base.py  BaseQuery.py  Coco.py  Config.py  Exceptions.py  Fields.py  Formatter.py  Help.py  Import.py  Iterator.py  Key.py  LyX.py  Makefile.am  Open.py  Query.py  QueryEngine.py  Record.py  Resource.py  Search.py  Selection.py  Sort.py  Storage.py  TextUI.py  Types.py  Utils.py  asn1.py  db3base.py  pybtextvar.py  recode.py  userformat.py  version.py.in  z3950.py
Pyblio/ConfDir/: Base.py  BibTeX+.py  BibTeX.py  DocBook.py  Gnome.py  GnomeUI.py  MARC.py  Makefile.am  Medline.py  Ovid.py  Refer.py  Style.py
Pyblio/Format/: BibTeX.py  MARC.py  Makefile.am  Medline.py  Ovid.py  OvidLike.py  RefDB.py  Refer.py  TaggedReader.py  docbook.py  isifile.py
Pyblio/GnomeUI/: Common.py  Compat.py  Config.py  Database.py  Document.py  Editor.py  Entry.py  Fields.py  FieldsInfo.py  FileSelector.py  Format.py  Index.py  Makefile.am  Medline.py  Mime.py  OpenURL.py  Pybliographic.py  Query.py  Search.py  Sort.py  Utils.py  __init__.py  query.glade
Pyblio/GnomeUI/glade/: Makefile.am  config1.ui  fields1.ui  format.ui  medline.ui  openurl.ui  pyblio.ui  pyblio.ui.in  search.ui  sort.ui
Pyblio/Output/: LaTeX.py  Makefile.am  abiword.py  html.py  latexutils.py  raw.py  text.py  textau.py  textnum.py
Pyblio/Query/: Makefile.am  Medline.py  Query.py  Spires.py  Z3950.py
Pyblio/Style/: Generic.py  Makefile.am  Parser.py  Utils.py  abbrv.py  alpha.py  apa4e.py  custom.py
Styles/: Abbrev.xml  Alpha.xml  Makefile.am
bibtex/: ChangeLog  Makefile.am  accents.c  author.c  biblex.l  bibparse.y  bibtex.c  bibtex.h  configure.ac  field.c  reverse.c  source.c  stringutils.c  struct.c  testparser.c
compiled/: Makefile.pre.in  README  Setup.in  accents.c  author.c  biblex.c  biblex.l  bibparse.c  bibparse.h  bibparse.y  bibtex.c  bibtex.h  bibtexmodule.c  config.h  entry.c  field.c  intl.c  recodemodule.c  reverse.c  setup.py  struct.c  testparser.c  wstrop.c
doc/: Makefile.am  docbook.xsl  pyblio.sgml  xmldoc
doc/C/: Makefile.am  config.sgml  database.sgml  entry.sgml  gui.sgml  iterator.sgml  key.sgml  pyblio.sgml  script.sgml  selection.sgml  styles.sgml  url.sgml
doc/design/: ChangeLog  DG.tex  Makefile  RM.tex  UG.tex  api.py  db.py  dgapr.tex  dgbib.tex  dgc01.tex  dgc02.tex  dgc03.tex  entity-relations.dia  external.tex  features.tex  intro.tex  manager.tex  processing.tex  pyblio.sty  sample.py  td-afe.tex  td-atd.tex  td-c01.tex  td-cnf.tex  td-cnx.tex  td-dbm.tex  td-gui.tex  td-lst.tex  td-prc.tex  td-rg1.tex  td-rg2.tex  td-rg3.tex  td-rg4.tex  td-rg5.tex  td-rg6.tex  td-rg7.tex  td-rh1.tex  td-rh2.tex  td-rh3.tex  td-rh4.tex  (+48 more)
doc/design/data/: cl_000.xml  cl_Bib.xml  cl_CIndex.xml  cl_Classifier.xml  cl_topic.xml  dlg_query1.xml  gloen_a.xml  gloen_c.xml  gloen_d.xml  gloen_e.xml  gloen_f.xml  gloen_g.xml  gloen_i.xml  gloen_p.xml  gloen_r.xml  gloen_t.xml  gloen_u.xml  gloen_w.xml  uc000.xml  uc001.xml  uc002.xml  uc003.xml  uc005.xml  uc006.xml  uc007.xml  uc008.xml  uc009.xml  uc010.xml  uc011.xml  uc012.xml  uc013.xml  uc014.xml  uc015.xml  uc016.xml  uc017.xml  uc020.xml  uc021.xml  uc023.xml  uc024.xml  uc025.xml  (+2 more)
doc/design/pics/: context-1  context1.eps  mue-1.dia  mue-1.eps  ov-uc-001.eps  ov-uc-001.ucd  searchx1.eps  uses01.eps  uses01.ucd
doc/design/toy/: api.py  db.py  sample.py  tst_manif.py  tst_query.py  tst_role.py  tst_run.sh  z.py
doc/examples/: medline.xml
doc/it/: Makefile.am  config.sgml  database.sgml  gui.sgml  iterator.sgml  pyblio.sgml  script.sgml  styles.sgml  url.sgml
etc/: installer.in
extras/: Makefile.am
glade/: Makefile.am  config1.glade  format.glade  medline.glade  pyblio-intl.c  pyblio.glade  pyblio.gladep  search-intl.c  search.glade  search.gladep  sort.glade  sort.gladep
help/: Makefile.am  pybliographer.omf.in
help/C/: about.page  addhelp.page  command-line.page  customization.page  gettingstarted.page  gui-creating.page  gui-edit.page  gui-formats.page  gui-navigating.page  gui-opening.page  gui-pubmed.page  gui-searching.page  gui-settings.page  gui-sorting.page  gui-styles.page  gui-usinglyx.page  gui.page  index.page  scripting-basics.page  scripting-existing.page  scripting-writeown.page  typcon.page  whatsnew.page
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
help/sl/: sl.po
intl/: .cvsignore
macros/: Makefile.am  python.m4
po/: .cvsignore  ChangeLog  Makefile.am  Makefile.in.in  POTFILES.in  README.TRANSLATIONS  az.po  ca.po  cat-id-tbl.c  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  fi.po  fr.po  hr.po  hu.po  it.po  ja.po  nl.po  no.po  oc.po  pl.po  pt.po  pt_BR.po  pybliographer.pot  ro.po  ru.po  sk.po  sl.po  sr.po  sr@Latn.po  sv.po  tr.po  uk.po  update.pl  vi.po
pyblio-web/: Makefile  defines.m4  development.m4  documentation.m4  download.m4  faq.m4  history.m4  index.m4  list-documents.sh  mailing.m4  news.m4  sample.html  screenshots.m4  summary.m4  template.m4
scripts/: Makefile.am  pybcheck.py  pybcompact.py  pybconvert.py  pybformat.py  pybliocheck.py  pybliocompact.py  pyblioconvert.py  pyblioformat.py  pybliographic.py  pybliotex.py  pybliotext.py  pybscript.in  pybtex.py
tests/: Makefile.am  bibtex.bib  compact  compact.bib  convert  format.html  format.latex  format.py  format.raw  format.text  import-export  import-export.py  medline.bib  medline.med  pubmed.bib  pybformat  pybtex  refer.refer  test-pybcheck  testing.sh
wstring/: AUTHOR  Makefile.am  README  iso8859.py  wstremul.py  wstring.py
